k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beacon-priorauth-ingress
  namespace: beacon
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/group.name: beacon-priorauth
    alb.ingress.kubernetes.io/healthcheck-path: /agent/policies
spec:
  ingressClassName: alb
  rules:
    - host: beacon.sbxaws.medeanalytics.zone
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: beacon-priorauth-svc
                port:
                  number: 80
